--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,15 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+      <servlet-name>coreServlet</servlet-name>
+      <servlet-class>controller.CoreServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>coreServlet</servlet-name>
+      <url-pattern>/coreServlet</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+      <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
