--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,6 @@
 	</dependency>
   </dependencies>
   <build>
-    <finalName>publicaccount</finalName>
+    <finalName>Root</finalName>
   </build>
 </project>
