--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,26 @@
 	</dependency>
   </dependencies>
   <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <encoding>utf8</encoding>
+            </configuration>
+        </plugin>
+
+        <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.1.1</version>
+            <configuration>
+                <warSourceDirectory>src/main/webapp</warSourceDirectory>
+            </configuration>
+        </plugin>
+    </plugins>
     <finalName>Root</finalName>
   </build>
 </project>
