--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 	    <artifactId>slf4j-log4j12</artifactId>
 	    <version>1.7.21</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
