--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,16 +3,17 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-      <servlet-name>coreServlet</servlet-name>
-      <servlet-class>controller.CoreServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-      <servlet-name>coreServlet</servlet-name>
-      <url-pattern>/coreServlet</url-pattern>
-  </servlet-mapping>
-  <welcome-file-list>
-      <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
+    <servlet>
+		<servlet-name>springServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring-mvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+    <servlet-mapping>
+		<servlet-name>springServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 </web-app>
