--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:config/publicaccount-context.xml
+			classpath*:config/publicaccount-*.xml
 		</param-value>
 	</context-param>
 	<listener>
