--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,13 @@
 	    <artifactId>mybatis-spring</artifactId>
 	    <version>1.3.0</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.18</version>
+	</dependency>
+	
 	<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
 	<dependency>
 	    <groupId>commons-dbcp</groupId>
